@@ -1,8 +1,9 @@
-<?xml version="1.0" encoding="UTF-8"?> 
-<!DOCTYPE properties SYSTEM "http://java.sun.com/dtd/properties.dtd"> 
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<!DOCTYPE properties SYSTEM "http://java.sun.com/dtd/properties.dtd">
 <properties>
-<comment>TrayRSS Language Configuration</comment> 
-<entry key="trayrss.lang">de</entry>
+<comment>TrayRSS Configuration</comment>
 <entry key="trayrss.displaysecond">10</entry>
 <entry key="trayrss.displaycount">5</entry>
+<entry key="trayrss.displaycout">5</entry>
+<entry key="trayrss.lang">en</entry>
 </properties>
