@@ -1,3 +1,3 @@
 #Build Number for ANT. Do not edit!
-#Mon Jul 20 22:01:36 CEST 2009
-build.number=23
+#Tue Jul 21 17:58:53 CEST 2009
+build.number=26
